<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="sixtus.com.homenavigation.UserEmail"
    android:orientation="vertical"
    android:background="@drawable/ecg2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@android:drawable/screen_background_dark_transparent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_email"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorText"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:textColor="@color/colorinput"
        android:id="@+id/new_email"
        android:hint="@string/new_email"
        android:layout_height="75dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorText"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:textColor="@color/colorinput"
        android:id="@+id/confirm_new_email"
        android:hint="@string/confirm_new_email" />
    <Button
        android:text="@string/email_update_button"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:padding="10dp"
        android:background="@drawable/button_layout"
        android:textAlignment="center"
        android:id="@+id/update_email_button"
        android:layout_height="75dp" />
    </LinearLayout>

</LinearLayout>
    </ScrollView>
