<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ecg2"
    tools:context="sixtus.com.homenavigation.UserPassword">

    <!-- Login progress -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@android:drawable/screen_background_dark_transparent">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">



            <EditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:hint="@string/prompt_current_password"
                android:textColorHint="@color/colorText"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/input_text_size"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:layout_height="60dp" />
            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/prompt_new_password"
                android:textColorHint="@color/colorText"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/input_text_size"
                android:textAlignment="center"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:textColor="@color/colorText"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                 />
            <EditText
                android:id="@+id/confirm_new_password"
                android:layout_width="match_parent"
                android:hint="@string/confirm_new_password"
                android:textColorHint="@color/colorText"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/input_text_size"
                android:textAlignment="center"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:textColor="@color/colorText"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_height="60dp" />

            <Button
                android:id="@+id/password_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/button_layout"
                android:textColor="@color/colorText"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:text="Update"
                android:padding="10dp"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>
        </LinearLayout>
</LinearLayout>
